; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble.c_BTM_UseLeLink.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble.c_BTM_UseLeLink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@BT_TRANSPORT_BR_EDR = common dso_local global i32 0, align 4
@BT_TRANSPORT_LE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@BT_DEVICE_TYPE_BLE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @BTM_UseLeLink(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %8 = load i32, i32* @FALSE, align 4
  store i32 %8, i32* %7, align 4
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @BT_TRANSPORT_BR_EDR, align 4
  %11 = call i32* @btm_bda_to_acl(i32 %9, i32 %10)
  store i32* %11, i32** %4, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = load i32, i32* %7, align 4
  store i32 %14, i32* %2, align 4
  br label %32

15:                                               ; preds = %1
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @BT_TRANSPORT_LE, align 4
  %18 = call i32* @btm_bda_to_acl(i32 %16, i32 %17)
  store i32* %18, i32** %4, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %22

20:                                               ; preds = %15
  %21 = load i32, i32* @TRUE, align 4
  store i32 %21, i32* %7, align 4
  br label %29

22:                                               ; preds = %15
  %23 = load i32, i32* %3, align 4
  %24 = call i32 @BTM_ReadDevInfo(i32 %23, i64* %5, i32* %6)
  %25 = load i64, i64* %5, align 8
  %26 = load i64, i64* @BT_DEVICE_TYPE_BLE, align 8
  %27 = icmp eq i64 %25, %26
  %28 = zext i1 %27 to i32
  store i32 %28, i32* %7, align 4
  br label %29

29:                                               ; preds = %22, %20
  br label %30

30:                                               ; preds = %29
  %31 = load i32, i32* %7, align 4
  store i32 %31, i32* %2, align 4
  br label %32

32:                                               ; preds = %30, %13
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32* @btm_bda_to_acl(i32, i32) #1

declare dso_local i32 @BTM_ReadDevInfo(i32, i64*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
